[workspace]
exclude = ["tch-rs"]
members = [
    "aicirt",
    "controllers/toktrie",
    "controllers/aici_abi",
    "controllers/aici_native",
    "controllers/declctrl",
    "controllers/pyctrl",
    "controllers/jsctrl",
    "controllers/llguidance_ctrl",
    "controllers/uppercase",
    "controllers/derivre",
    "rllm/rllm-base",
    "rllm/rllm-cuda",
    "rllm/rllm-llamacpp",
    "rllm/tch-cuda",
    "rllm/llama-cpp-low",
    "py/llguidance",
]
resolver = "2"

[profile.release]
debug = 1
