[workspace]
exclude = ["tch-rs"]
members = [
    "aicirt",
    "controllers/toktrie/core",
    "controllers/toktrie/hf_tokenizers",
    "controllers/aici_abi",
    "controllers/aici_native",
    "controllers/declctrl",
    "controllers/pyctrl",
    "controllers/jsctrl",
    "controllers/llguidance/python",
    "controllers/llguidance/parser",
    "controllers/llguidance_ctrl",
    "controllers/uppercase",
    "controllers/derivre",
    "rllm/rllm-base",
    "rllm/rllm-cuda",
    "rllm/rllm-llamacpp",
    "rllm/tch-cuda",
    "rllm/llama-cpp-low",
]
resolver = "2"

[profile.release]
debug = 1
