[package]
name = "aici_ast_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = "0.1.0"
regex-automata = { version = "0.3.8", default-features = false, features = ["dfa", "syntax", "perf"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[patch.crates-io]
aici_abi = { path = "../aici_abi" }

[[bin]]
name = "aici_ast_runner"
path = "src/ast_runner.rs"
