[package]
name = "aici_ast_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = "0.1.0"
regex-automata = { version = "0.3.8", default-features = false, features = ["dfa", "syntax", "perf", "perf-inline"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.107"
cfgrammar = "0.13.3"
lrlex = "0.13.3"
lrpar = "0.13.3"
lrtable = "0.13.3"
anyhow = "1.0.75"
vob = "3.0.3"
rustc-hash = "1.1.0"

[patch.crates-io]
aici_abi = { path = "../aici_abi" }

[[bin]]
name = "aici_ast_runner"
path = "src/ast_runner.rs"

[profile.release]
debug = 1
