[package]
name = "aicirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
clap = { version = "4.4.4", features = ["derive"] }
hex = "0.4.3"
libc = "0.2.148"
log = "0.4.20"
rayon = "1.7.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
sha2 = "0.10.7"
wasmtime = { version = "13.0.0", default-features = false, features = ["cranelift", "parallel-compilation", "pooling-allocator", "vtune"] }
aici_abi = { path = "../aici_abi" }
aici_tokenizers = { path = "../aici_tokenizers" }
tokenizers = "0.14.1"
thread-priority = "0.13.1"
ipc-channel = "0.18.0"
flexi_logger = "0.27.3"
cap = "0.1.2"
