[package]
name = "aicirt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
base64 = "0.21.4"
clap = { version = "4.4.4", features = ["derive"] }
hex = "0.4.3"
libc = "0.2.148"
log = "0.4.20"
rayon = "1.7.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
sha2 = "0.10.7"
wasmtime = { version = "16.0.0", default-features = false, features = ["cranelift", "parallel-compilation", "pooling-allocator"] }
aici_abi = { path = "../controllers/aici_abi" }
tokenizers = { version = "0.15.0", features = ["http"] }
thread-priority = "0.15.1"
ipc-channel = "0.18.0"
flexi_logger = "0.27.3"
cap = "0.1.2"
fxhash = "0.2.1"
bincode = "1.3.3"
uuid = "1.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
linux-futex = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
ulock-sys = "0.1.0"

