[package]
name = "cpp-rllm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.18", features = ["derive"] }
llama_cpp_low = { path = "../llama-cpp-low" }
rllm = { path = "../rllm", default-features = false, features = ["llamacpp"] }

[[bin]]
name = "cpp-rllm"
path = "src/cpp-rllm.rs"

[features]
default = []
cuda = ["llama_cpp_low/cuda"]
