[package]
name = "rllm-cpp"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
actix-web = "4.4.0"
clap = { version = "4.4.18", features = ["derive"] }
llama_cpp_low = { path = "../llama-cpp-low" }
rllm = { path = "../rllm-cuda", default-features = false, features = ["llamacpp"] }

[[bin]]
name = "rllm-cpp"
path = "src/rllm-cpp.rs"

[features]
default = []
cuda = ["llama_cpp_low/cuda"]
