[package]
name = "infer"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
candle-transformers = { path = "../candle/candle-transformers", features = ["cuda"] }
candle-nn = { path = "../candle/candle-nn" }
candle = { path = "../candle/candle-core", features = ["cuda", "cudnn"], package = "candle-core" }
clap = "4.4.8"
hf-hub = "0.3.2"
tokenizers = { version = "0.15.0", features = ["hf-hub"] }

[[bin]]
name = "infer"
path = "src/infer.rs"
