[package]
name = "rllm"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
candle-transformers = { path = "../candle/candle-transformers", features = ["cuda", "flash-attn"] }
candle-nn = { path = "../candle/candle-nn" }
candle-flash-attn = { path = "../candle/candle-flash-attn" }
candle = { path = "../candle/candle-core", features = ["cuda", "cudnn"], package = "candle-core" }
clap = "4.4.8"
hf-hub = "0.3.2"
tokenizers = { version = "0.15.0", features = ["hf-hub"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }

[[bin]]
name = "infer"
path = "src/infer.rs"
