[package]
name = "aici_jsvm"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
libc = "0.2.150"
lazy_static = "1.4.0"
num-traits = "0.2.17"
once_cell = "1.18.0"
indexmap = { version = "2.1.0", features = ["std"] }
rquickjs-sys = { git = "https://github.com/mmoskal/rquickjs", rev = "d67a104f5d89b5532c5" }
rquickjs = { git = "https://github.com/mmoskal/rquickjs", rev = "d67a104f5d89b5532c5" }

[[bin]]
name = "aici_jsvm"
path = "src/jsvm.rs"

[build-dependencies]
glob = "0.3.1"
