[package]
name = "aici_pyvm"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
regex-automata = { version = "0.3.8", default-features = false, features = ["std", "dfa", "syntax", "perf", "meta"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
cfgrammar = "0.13.3"
lrlex = "0.13.3"
lrpar = "0.13.3"
lrtable = "0.13.3"
anyhow = "1.0.75"
vob = "3.0.3"
rustc-hash = "1.1.0"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "317f44945420e",  default-features = false, features = ["compiler"] }
rustpython-derive = { git = "https://github.com/RustPython/RustPython", rev = "317f44945420e" }
libc = "0.2.150"
lazy_static = "1.4.0"
num-traits = "0.2.17"
crossbeam-utils = "0.8.16"
once_cell = "1.18.0"
indexmap = { version = "1.9.3", features = ["std"] }

[[bin]]
name = "aici_pyvm"
path = "src/pyvm.rs"

[build-dependencies]
glob = "0.3.1"
