[package]
name = "regex_llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
regex-automata = "0.3.8"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["preserve_order"] }
tokenizers = "0.14.0"
gvm_abi = "0.1.0"
indexmap = "2.0.1"

[patch.crates-io]
gvm_abi = { path = "../gvm_abi" }
