[package]
name = "rllm"
version = "0.1.0"
edition = "2021"
default-run = "rllm"

[dependencies]
anyhow = "1.0.75"
candle-nn = { path = "../candle/candle-nn", features = ["cuda"] }
candle-flash-attn = { path = "../candle/candle-flash-attn" }
candle-flash-attn2 = { path = "../candle-flash-attn" }
candle-core = { path = "../candle/candle-core", features = ["cuda", "cudnn"] }
clap = "4.4.8"
hf-hub = "0.3.2"
tokenizers = { version = "0.15.0", features = ["hf-hub"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
rand = "0.8.5"
half = "2.3.1"
candle-transformers = { path = "../candle/candle-transformers", features = ["cuda"] }
log = "0.4.20"
cudarc = { version = "0.9.14", features = ["f16"] }
actix-web = "4.4.0"
tokio = { version = "1.34.0", features = ["sync"] }
futures = "0.3.29"
uuid = { version = "1.6.1", features = ["v4"] }
derive_more = "0.99.17"

aicirt = { path = "../aicirt" }
aici_abi = { path = "../aici_abi" }
aici_tokenizers = { path = "../aici_tokenizers" }
libc = "0.2.150"
base64 = "0.21.5"
indicatif = "0.17.7"

[[bin]]
name = "rllm"
path = "src/rllm.rs"

[[bin]]
name = "rllm-server"
path = "src/server/server.rs"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"
