[package]
name = "candle-flash-attn2"
version = "0.3.1"
edition = "2021"

description = "Flash attention layer for the tch-rs"
license = "MIT"
readme = "README.md"

[dependencies]
tch = { path = "../tch-rs", features = ["cuda"] }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
candle-nn = { path = "../candle/candle-nn", version = "0.3.1", features = ["cuda"] }
