[package]
name = "aici_use_tok"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = "0.1.0"
regex-automata = { version = "0.3.8", default-features = false, features = ["dfa", "syntax", "perf"] }

[patch.crates-io]
aici_abi = { path = "../aici_abi" }

[[bin]]
name = "aici_use_tok"
path = "src/use_tok.rs"
