[package]
name = "ag2_ctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
derivre = { path = "../derivre" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
rustc-hash = "1.1.0"
regex-automata = { version = "0.4.6", default-features = false, features = ["std", "dfa", "syntax", "perf", "meta"] }
regex = "1.10.4"
regex-syntax = "0.8.3"

[[bin]]
name = "ag2_ctrl"
path = "src/gctrl.rs"
