[package]
name = "llguidance_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
aici_llguidance_ctrl = { path = "../llguidance_ctrl" }
aici_native = { path = "../aici_native" }
anyhow = "1.0.75"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
rustc-hash = "1.1.0"

[[bin]]
name = "llguidance_tester"
path = "src/llguidance_tester.rs"
