[package]
name = "aici_abi"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[lib]
name = "aici_abi"

[dependencies]
toktrie = { path = "../toktrie" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
regex-automata = { version = "0.4.6", default-features = false, features = ["std", "dfa", "syntax", "perf", "meta"], optional = true }
cfgrammar = { version = "0.13.3", optional = true }
lrtable = { version = "0.13.3", optional = true }
vob = { version = "3.0.3", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
bytemuck = "1.16.0"
bytemuck_derive = "1.6.0"

[features]
default = ["cfg", "rx"]
cfg = ["dep:cfgrammar", "dep:lrtable", "dep:vob", "dep:rustc-hash"]
rx = ["dep:regex-automata"]

[[bin]]
name = "yesno"
path = "src/yesno.rs"
