[package]
name = "derivre"
version = "0.1.0"
edition = "2021"

[lib]
name = "derivre"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.75"
bytemuck = "1.16.0"
bytemuck_derive = "1.6.1"
hashbrown = "0.14.5"
regex-syntax = { version = "0.8.3" }

[dev-dependencies]
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.13"
bstr = { version = "1.9.1", default-features = false, features = ["std", "serde"] }

[[bin]]
name = "derivre"
path = "src/derivre.rs"
