[package]
name = "aici_guidance_ctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
rustpython-vm = { git = "https://github.com/RustPython/RustPython", rev = "317f44945420e",  default-features = false, features = ["compiler"] }
rustpython-derive = { git = "https://github.com/RustPython/RustPython", rev = "317f44945420e" }
libc = "0.2.150"
lazy_static = "1.4.0"
num-traits = "0.2.17"
crossbeam-utils = "0.8.16"
once_cell = "1.18.0"
indexmap = { version = "2.1.0", features = ["std"] }

[[bin]]
name = "aici_pyctrl"
path = "src/gctrl.rs"

[build-dependencies]
glob = "0.3.1"
