[package]
name = "aici_guidance_ctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
quick-protobuf = "0.8.1"
rustc-hash = "1.1.0"

[[bin]]
name = "aici_guidance_ctrl"
path = "src/gctrl.rs"
