[package]
name = "guidance_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
aici_native = { path = "../aici_native" }
aici_guidance_ctrl = { path = "../guidance_ctrl" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
log = "0.4.21"

[[bin]]
name = "guidance_parser_test"
path = "src/gparser.rs"
