[package]
name = "aici_jsctrl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aici_abi = { path = "../aici_abi" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
libc = "0.2.150"
lazy_static = "1.4.0"
num-traits = "0.2.17"
once_cell = "1.18.0"
indexmap = { version = "2.1.0", features = ["std"] }
rquickjs-sys = { git = "https://github.com/DelSkayn/rquickjs", rev = "343b21b742d3bb052710dc53144b79dc61bb592d" }
rquickjs = { git = "https://github.com/DelSkayn/rquickjs", rev = "343b21b742d3bb052710dc53144b79dc61bb592d", features = ["array-buffer", "macro"] }

[[bin]]
name = "aici_jsctrl"
path = "src/jsctrl.rs"

[build-dependencies]
glob = "0.3.1"
