[package]
name = "aici_jsctrl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
aici_abi = { path = "../aici_abi" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
lazy_static = "1.4.0"
rquickjs = { git = "https://github.com/DelSkayn/rquickjs", rev = "343b21b742d3bb052710dc53144b79dc61bb592d", features = ["array-buffer", "macro"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
glob = "0.3.1"
