[package]
name = "aici_llguidance_ctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
aici_abi = { path = "../aici_abi" }
llguidance_parser = { path = "../llguidance_parser" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"

[[bin]]
name = "aici_llguidance_ctrl"
path = "src/gctrl.rs"

[features]
default = []
logging = []