[package]
name = "llguidance_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
toktrie = { path = "../toktrie" }
derivre = { path = "../derivre" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
rustc-hash = "1.1.0"

[features]
default = []
logging = []