[package]
name = "toktrie_hf_tokenizers"
version = "0.1.0"
edition = "2021"

[dependencies]
toktrie = { path = "../toktrie" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
rustc-hash = { version = "2.0.0" }
tokenizers = { version = "0.15.0", features = ["http"] }
log = "0.4.21"
